manifest/appointment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-api
  template:
    metadata:
      labels:
        app: appointment-api
    spec:
      containers:
        - name: appointment-api
          image: bhargavbhat2000/appointment:6b7cbf857de21c927ac393362585c82d8f880ae0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
