manifest/audit-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-api
  template:
    metadata:
      labels:
        app: audit-api
    spec:
      containers:
        - name: audit-api
          image: bhargavbhat2000/audit:80ebc25178d6861122e153009dec91082687cec7	
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
