manifest/patient-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-api
  template:
    metadata:
      labels:
        app: patient-api
    spec:
      containers:
        - name: patient-api
          image: bhargavbhat2000/patientservice:cc72da7d675eaf6c5a588cf836340afdd021d6b4
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
