manifest/appointment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: appointment-api-service
spec:
  type: LoadBalancer
  selector:
    app: appointment-api
  ports:
    - targetPort: 80
      port: 4324
