manifest/audit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: audit-api-service
spec:
  type: LoadBalancer
  selector:
    app: audit-api
  ports:
    - targetPort: 80
      port: 4326
