manifest/doctor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: doctor-api-service
spec:
  type: LoadBalancer
  selector:
    app: doctor-api
  ports:
    - targetPort: 80
      port: 4323
