manifest/patient-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patient-api-service
spec:
  type: LoadBalancer
  selector:
    app: patient-api
  ports:
    - targetPort: 80
      port: 4322
