manifest/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
    - targetPort: 80
      port: 4321
      protocol: TCP
