manifest/appointment-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointment-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/Appointment/getappointmentsbypatientid
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      - path: /api/Appointment/BookAppiontment
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      - path: /api/Appointment/Email_Notification
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      - path: /api/Appointment/Update/
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      - path: /api/Appointment/UpdateCheckUp/
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324

      - path: /api/Appointment/getappointmentsbyDate
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      - path: /api/Appointment/getappointmentsbyDoctoridAndStatus
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      - path: /api/Appointment/GetAppointmentsAfterCheckup
        pathType: Prefix
        backend:
          service:
            name: appointment-api-service
            port:
              number: 4324
      # - path: /api/PatientCheckUp/GetCheckUpDetailsByAppointmentId
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: appointment-api-service
      #       port:
      #         number: 4324
      # - path: /api/PatientCheckUp/AddcheckUpdetails
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: appointment-api-service
      #       port:
      #         number: 4324
