manifest/ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ui-ingress
spec: 
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: ui-service
              port:
                number: 4321
